# C-CUDA

./: CMakeLists.txt  Calc.c  Calc.h  Oberflaeche.c  Oberflaeche.h  Oberfläche.c  Oberfläche.h  Object.c  Object.h  ObjectArray.c  ObjectArray.h  Vector.c  Vector.h  main.cu
